.circleci/deployment/K8s/deployments.yml
# https://kubernetes.io/docs/concepts/workloads/controllers/deployment/
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  "${DEPLOYMENT_NAME}"
  namespace: default
  labels:
    app:  openhcs
    environ: "${ENVIRONMENT}"   # staggging or production
    tier: backend
    context: "${CONTEXT}"       # blue or green
    version: "${VERSION}"
spec:
  selector:
    matchLabels:
      app: openhcs
  replicas: 2
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  openhcs
        environ: "${ENVIRONMENT}"
        tier: backend
        context: "${CONTEXT}"
    spec:
      containers:
      - name:  openhcs
        image: "${OPENHCS_IMAGE}"
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
        livenessProbe:
          httpGet:
            path: "/"
            port: ${SERVER_PORT}
          initialDelaySeconds: 5
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        ports:
        - containerPort: ${SERVER_PORT}
          name: web
        # volumeMounts:
        # - name: logs
        #   mountPath: /usr/src/

      # volumes:
      #   - name: logs
      #     persistentVolumeClaim:
      #       claimName: openhcspvclaim
      restartPolicy: Always
