.circleci/deployment/K8s/services.yml
kind: Service
apiVersion: v1
metadata:
  name: openhcspsql
  namespace: default
  labels:
    tier: backend
    component: database
spec:
  type: ExternalName
  externalName: "${EXTERNAL_NAME}"
  ports:
    - port: 5432

---
apiVersion: v1
kind: Service
metadata:
  name: openhcs-green
  namespace: default
  labels:
    app: openhcs
    environ: stagging 
    tier: backend
spec:
  type: NodePort
  ports:
  - port: ${SERVER_PORT}
    targetPort: ${SERVER_PORT}
    name: web
  selector:
    app: openhcs
    environ: stagging
    context: green

---
apiVersion: v1
kind: Service
metadata:
  name: openhcs-blue
  namespace: default
  labels:
    app: openhcs
    environ: production 
    tier: backend
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    name: web
  - port: 443
    targetPort: 443
    name: web
  selector:
    app: openhcs
    environ: production
    context: blue
