.circleci/deployment/K8s/ingresses.yml
# https://kubernetes.io/docs/concepts/services-networking/ingress/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: alb
  name: staging-openhcs
  namespace: default
spec:
  rules:
  - host: api.openhcs.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: openhcs-green
            port:
              number: 443
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: alb
  name: production-openhcs
  namespace: default
spec:
  rules:
  - host: api.openhcs.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: openhcs-blue
            port:
              number: 443
